# accta

./: .gitignore  README.md  justfile  main.py  pyproject.toml
backend/: action.py  agent.py  api.py  country.py  main.py  messages.py  pyproject.toml  state.py  test_state.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ActionPane.tsx  ChatInput.tsx  ChatMessage.tsx  ConnectionStatus.tsx  LoadingMessage.tsx
frontend/src/hooks/: useWebSocket.ts
