[project]
name = "accta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.2.11",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "pytest>=8.4.2",
    "currencyconverter>=0.18.9",
]
